create the model including generators and discriminators

--- a/GAN_pytorch.ipynb
+++ b/GAN_pytorch.ipynb
@@ -161,7 +161,25 @@
         "id": "JKLNeW-Wqxo2"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Define the Generator network\n",
+        "class Generator(nn.Module):\n",
+        "    def __init__(self, input_dim=100, output_dim=2):\n",
+        "        super(Generator, self).__init__()\n",
+        "        \n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Linear(input_dim, 128),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(128, 256),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(256, 512),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(512, output_dim)\n",
+        "        )\n",
+        "        \n",
+        "    def forward(self, x):\n",
+        "        return self.model(x)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,7 +197,26 @@
         "id": "2CECdQEKq3GJ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Define the Discriminator network\n",
+        "class Discriminator(nn.Module):\n",
+        "    def __init__(self, input_dim=2):\n",
+        "        super(Discriminator, self).__init__()\n",
+        "        \n",
+        "        self.model = nn.Sequential(\n",
+        "            nn.Linear(input_dim, 512),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(512, 256),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(256, 128),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(128, 1),\n",
+        "            nn.Tanh()\n",
+        "        )\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        return self.model(x)\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,12 +229,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "Ka6jX_SAq5Ww"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def discriminator_update(X, Z, nnet_D, nnet_G, loss, trainer_D):\n",
+        "    # Reset gradients\n",
+        "    trainer_D.zero_grad()\n",
+        "    \n",
+        "    # Get batch size\n",
+        "    batch_size = X.size(0)\n",
+        "    \n",
+        "    # Create labels for real and fake data\n",
+        "    real_labels = torch.ones(batch_size, 1)\n",
+        "    fake_labels = torch.zeros(batch_size, 1)\n",
+        "    \n",
+        "    # Forward pass with real data\n",
+        "    real_output = nnet_D(X)\n",
+        "    loss_real = loss(real_output, real_labels)\n",
+        "    \n",
+        "    # Generate fake data\n",
+        "    fake_data = nnet_G(Z)\n",
+        "    \n",
+        "    # Forward pass with fake data\n",
+        "    fake_output = nnet_D(fake_data.detach())  # Detach to avoid computing gradients for generator\n",
+        "    loss_fake = loss(fake_output, fake_labels)\n",
+        "    \n",
+        "    # Compute total discriminator loss\n",
+        "    loss_D = (loss_real + loss_fake) / 2\n",
+        "    \n",
+        "    # Compute gradients\n",
+        "    loss_D.backward()\n",
+        "    \n",
+        "    # Update weights\n",
+        "    trainer_D.step()\n",
+        "    \n",
+        "    return loss_D\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -210,12 +280,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "Xlw3SAhoq8CQ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def generator_update(Z, nnet_D, nnet_G, loss, trainer_G):\n",
+        "    # Reset gradients\n",
+        "    trainer_G.zero_grad()\n",
+        "    \n",
+        "    # Get batch size\n",
+        "    batch_size = Z.size(0)\n",
+        "    \n",
+        "    # Create labels (we want generator to fool discriminator)\n",
+        "    real_labels = torch.ones(batch_size, 1)\n",
+        "    \n",
+        "    # Generate fake data\n",
+        "    fake_data = nnet_G(Z)\n",
+        "    \n",
+        "    # Get discriminator predictions on fake data\n",
+        "    fake_output = nnet_D(fake_data)\n",
+        "    \n",
+        "    # Compute generator loss\n",
+        "    loss_G = loss(fake_output, real_labels)\n",
+        "    \n",
+        "    # Compute gradients\n",
+        "    loss_G.backward()\n",
+        "    \n",
+        "    # Update weights\n",
+        "    trainer_G.step()\n",
+        "    \n",
+        "    return loss_G\n"
+      ]
     },
     {
       "cell_type": "markdown",
